保持学习，效率提升

--- a/doc/浏览器配置.md
+++ b/doc/浏览器配置.md
@@ -2,3 +2,7 @@
 沉浸式翻译  
 篡改猴  
 
+# Vimium C 
+感觉并不是特别高效，商店的版本部分页面不可用，使用很割裂，适合的是长网页浏览快速跳转顶部和底部  
+埋坑: https://github.com/gdh1995/vimium-c/issues/47
+
