--- a/doc/终端配置.md
+++ b/doc/终端配置.md
@@ -7,3 +7,9 @@ zsh 配置模板
 `curl -fsSL https://raw.githubusercontent.com/zimfw/install/master/install.zsh | zsh`
 配置文件参考  
 `https://github.com/theniceboy/.config/tree/master/zsh`
+
+# python venv 的bin添加到系统使用  
+`export PATH="$HOME/.local/bin:$PATH"`
+使用软链接
+ln -s /Users/you/.venvs/myenv/bin/your_tool ~/.local/bin/your_tool
+
